kubefiles/core/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: aleph
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/acme-challenge-type: "http01"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
spec:
  tls:
    - secretName: tls-staging.data.occrp.org
      hosts:
        - staging.data.occrp.org
  rules:
    - host: staging.data.occrp.org
      http:
        paths:
          - backend:
              serviceName: search-web
              servicePort: 80
---
